# Breakout

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat
include/: EventLoop.h  GameLoop.h  GameWindow.h  Initialize.h  MainContrainer.h  SpaceConverter.h  Surface.h  TextureRepository.h  Utils.h  WindowEvent.h
include/component/: Components.h
include/factory/: DynamicBodyFactory.h  StaticBodyFactory.h
include/resource/: Resource.h  Texture.h
include/screen/: DemoScreen.h  Screen.h  ScreenManager.h
include/system/: Systems.h
src/: Breakout.cpp  EventLoop.cpp  GameLoop.cpp  GameWindow.cpp  Initialize.cpp  MainContrainer.cpp  SpaceConverter.cpp  Surface.cpp  TextureRepository.cpp  Utils.cpp
src/factory/: DynamicBodyFactory.cpp  StaticBodyFactory.cpp
src/resource/: Texture.cpp
src/screen/: DemoScreen.cpp  ScreenManager.cpp
src/system/: Systems.cpp
